--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- Tytuł ustawiony statycznie dla robotów i przeglądarki -->
     <title>Oferta BOGO | 21–27 Października 2025</title>
 
-    <!-- === META TAGI OPEN GRAPH Z TREŚCIĄ WPISANĄ STATYCZNIE === -->
+    <!-- === META TAGI OPEN GRAPH Z TREŚCI WPISANĄ STATYCZNIE === -->
     <meta property="og:title" content="Oferta BOGO | 21–27 Października 2025">
     <meta property="og:description" content="Zamów jeden produkt, a drugi otrzymasz GRATIS">
     <meta property="og:image" content="https://raw.githubusercontent.com/emilia-chodorowska/BOGO/main/images/bogo-social-preview.png">
@@ -115,7 +115,7 @@
          </header>
 
         <!-- GŁÓWNA TREŚĆ (Siatka z ofertami BOGO i podsumowaniem) -->
-        <main id="bogo-grid-container" data-debug-border="border-2 border-blue-500" class="relative z-10 grid grid-cols-1 lg:grid-cols-2 gap-6 p-2">
+        <main id="bogo-grid-container" data-debug-border="border-2 border-blue-500" class="relative z-10 grid grid-cols-1 lg:grid-cols-2 gap-6 p-2" style="grid-auto-rows: minmax(160px, auto);">
             <!-- Karty BOGO i podsumowanie zostaną wstawione tutaj przez JavaScript -->
         </main>
     </div>
@@ -123,20 +123,19 @@
     <!-- === JEDEN WSPÓLNY SZABLON DLA WSZYSTKICH KART === -->
     <template id="card-template">
     <div 
-        class="bogo-card bg-white p-4 rounded-lg shadow-lg border-2 border-transparent flex flex-col sm:flex-row items-center gap-4"
+        class="bogo-card bg-white py-2 px-3 rounded-lg shadow-lg border-2 border-transparent flex flex-col sm:flex-row items-center gap-3"
         data-debug-border="border-green-500"
     >
-        <div class="card-images flex-shrink-0 flex items-center justify-center w-full sm:w-1/3 mb-4 sm:mb-0">
+        <div class="card-images flex-shrink-0 flex items-center justify-center w-full sm:w-1/2 mb-2 sm:mb-0">
             <img src="" alt="" class="card-img object-contain" data-debug-border="border-2 border-orange-500" onerror="this.src='https://placehold.co/150x150/f8d7da/d9534f?text=Błąd'">
         </div>
         <div class="flex-grow w-full text-center sm:text-left">
-            <div class="flex flex-col sm:flex-row justify-between items-center sm:items-start">
-                <h3 class="card-title text-sm font-semibold text-[#4a5c44] mb-2 sm:mb-0">
+            <div class="flex flex-col sm:flex-row justify-start items-center sm:items-start">
+                <h3 class="card-title text-sm font-semibold text-[#4a5c44] mb-1 sm:mb-0">
                     <!-- Treść tytułu będzie wstawiana przez JS -->
                 </h3>
-                <span class="card-price-bubble bg-[#cce2d3] text-[#4a5c44] font-bold py-1 px-3 rounded-full text-xs whitespace-nowrap ml-0 sm:ml-2"></span>
             </div>
-            <div class="text-xs text-gray-600 mt-2 border-t pt-2">
+            <div class="text-xs text-gray-600 mt-1 border-t pt-1">
                 <p>Oszczędność: <strong class="card-savings-amount font-bold"></strong> <span class="card-savings-percent"></span></p>
                 <p>Wartość PV: <strong class="card-pv font-bold"></strong></p>
             </div>
@@ -154,7 +153,7 @@
                 { id: 1, name: "Siberian Fir + Cedarwood", price: 110.75, savings: 87.00, pv: 23.50, img: "https://raw.githubusercontent.com/emilia-chodorowska/BOGO/main/images/bogo1.png", spanFull: false },
                 { id: 2, name: "Oregano + Majeranek", price: 162.50, savings: 126.50, pv: 34.50, img: "https://raw.githubusercontent.com/emilia-chodorowska/BOGO/main/images/bogo2.png", spanFull: false },
                 { id: 3, name: "On Guard + Stronger Touch", price: 205.75, savings: 94.25, pv: 43.50, img: "https://raw.githubusercontent.com/emilia-chodorowska/BOGO/main/images/bogo3.png", spanFull: false },
-                { id: 4, name: "Vetiver Touch + Guaiac Wood 15 ml + Balsam Fir 5 ml", price: 221.50, savings: 186.75, pv: 47.00, img: "https://raw.githubusercontent.com/emilia-chodorowska/BOGO/main/images/bogo4.png", spanFull: false },
+                { id: 4, name: "Vetiver Touch + Guaiac Wood + Balsam Fir", price: 221.50, savings: 186.75, pv: 47.00, img: "https://raw.githubusercontent.com/emilia-chodorowska/BOGO/main/images/bogo4.png", spanFull: false },
                 { id: 5, name: "Myrrh Touch + Brightening Gel", price: 273.00, savings: 184.50, pv: 58.00, img: "https://raw.githubusercontent.com/emilia-chodorowska/BOGO/main/images/bogo5.png", spanFull: true }
             ];
 
@@ -176,23 +175,28 @@
                 const cardElement = cardClone.querySelector('.bogo-card');
 
                 if (data.spanFull) {
-                    cardElement.classList.add('lg:col-span-2');
+                    // zajmij pełen span kolumn i rozciągnij na 2 wiersze na dużych ekranach
+                    cardElement.classList.add('lg:col-span-2', 'lg:row-span-2', 'h-full');
                 }
 
                 const img = cardElement.querySelector('.card-img');
                 img.src = data.img;
                 img.alt = data.alt;
-                const imgHeightClasses = data.spanFull ? 'h-32 sm:h-24' : 'h-28 sm:h-20';
+                // dla kart "pełnych" i zwykłych przypisujemy większe wysokości obrazków
+                // non-span: kompaktowo większy kontener; spanFull: znacznie wyższy
+                const imgHeightClasses = data.spanFull ? 'h-40 sm:h-32 lg:h-56' : 'h-36 sm:h-28 lg:h-44';
                 img.classList.add(...imgHeightClasses.split(' '));
 
                 const titleElement = cardElement.querySelector('.card-title');
                 titleElement.innerHTML = data.titleHTML;
-
-                if (!data.isSummary) {
+                // jeśli karta wymaga 3 wierszy tytułu (pierwsze 4 karty) — dajemy wyższą wysokość
+                if (data.threeRows) {
+                    titleElement.classList.add('h-16', 'leading-tight');
+                } else if (!data.isSummary) {
                     titleElement.classList.add('h-12');
                 }
 
-                cardElement.querySelector('.card-price-bubble').textContent = `${data.price.toFixed(2)} zł`;
+                // bąbelek z ceną został usunięty — nie ustawiamy już tekstu ceny tutaj
                 
                 const totalValue = data.price + data.savings;
                 const savingsPercent = totalValue > 0 ? ((data.savings / totalValue) * 100).toFixed(1) : 0;
@@ -207,12 +211,32 @@
 
             // 1. Renderowanie kart produktów
             bogoOffers.forEach(offer => {
+                // dla pierwszych 4 ofert przygotowujemy tytuł w 3 wierszach z plusem tam gdzie był
+                let titleHTML = offer.name;
+                let threeRows = false;
+                if (offer.id <= 4) {
+                    threeRows = true;
+                    const parts = offer.name.split('+').map(p => p.trim());
+                    const lines = [
+                        parts[0] || '',
+                        parts[1] || '',
+                        parts[2] || ''
+                    ];
+                    const titleLines = lines.map((line, idx) => {
+                        if (!line) return '<div></div>';
+                        const hasNextNonEmpty = lines.slice(idx + 1).some(l => l && l.trim() !== '');
+                        return `<div>${line}${hasNextNonEmpty ? ' +' : ''}</div>`;
+                    });
+                    titleHTML = titleLines.join('');
+                }
+
                 createAndAppendCard({
                     isSummary: false,
                     spanFull: offer.spanFull,
                     img: offer.img,
                     alt: offer.name,
-                    titleHTML: offer.name,
+                    titleHTML,
+                    threeRows,
                     price: offer.price,
                     savings: offer.savings,
                     pv: offer.pv
@@ -229,7 +253,7 @@
                 spanFull: true,
                 img: 'https://raw.githubusercontent.com/emilia-chodorowska/BOGO/main/images/bogo-bundle.svg',
                 alt: 'Zestaw BOGO',
-                titleHTML: 'Dodaj Zestaw BOGO (21–27.10) do koszyka — Gratis do całej promocji: Kminek 5 ml',
+                titleHTML: 'Dodaj Zestaw BOGO (21–27.10) do koszyka — Gratis do całej promocji: Kminek',
                 price: totalPrice,
                 savings: totalSavings,
                 pv: totalPV
