--- a/index.html
+++ b/index.html
@@ -122,12 +122,13 @@
 
     <!-- === JEDEN WSPÓLNY SZABLON DLA WSZYSTKICH KART === -->
     <template id="card-template">
-    <div 
-        class="bogo-card bg-white py-2 px-3 rounded-lg shadow-lg border-2 border-transparent flex flex-col sm:flex-row items-center gap-3"
-        data-debug-border="border-green-500"
-    >
-        <div class="card-images flex-shrink-0 flex items-center justify-center w-full sm:w-1/2 mb-2 sm:mb-0">
-            <img src="" alt="" class="card-img object-contain" data-debug-border="border-2 border-orange-500" onerror="this.src='https://placehold.co/150x150/f8d7da/d9534f?text=Błąd'">
+    <div class="bogo-card bg-white py-2 px-3 rounded-lg shadow-lg border-2 border-transparent flex flex-col sm:flex-row items-center gap-3"
+        data-debug-border="border-green-500">
+        <!-- Zmodyfikowany kontener na obrazek -->
+        <div class="card-images flex-shrink-0 flex items-center justify-center w-full sm:w-1/2 min-h-[120px] sm:min-h-[140px] md:min-h-[160px] mb-2 sm:mb-0">
+            <img src="" alt="" class="card-img h-full w-auto object-cover object-center" 
+                data-debug-border="border-2 border-orange-500" 
+                onerror="this.src='https://placehold.co/150x150/f8d7da/d9534f?text=Błąd'">
         </div>
         <div class="flex-grow w-full text-center sm:text-left">
             <div class="flex flex-col sm:flex-row justify-start items-center sm:items-start">
