Changes to be committed: 	modified:   index.html
wieksza czcionka

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         </div>
         <div class="flex-grow w-full text-center sm:text-left">
             <div class="flex flex-col sm:flex-row justify-start items-center sm:items-start">
-                <h3 class="card-title text-sm font-semibold text-slate-800 mb-1 sm:mb-0">
+                <h3 class="card-title text-xl font-semibold text-slate-800 mb-1 sm:mb-0">
                     <!-- Treść tytułu będzie wstawiana przez JS -->
                 </h3>
             </div>
