--- a/index.html
+++ b/index.html
@@ -115,6 +115,86 @@
         <main id="bogo-grid-container" data-debug-border="border-2 border-blue-500" class="relative z-10 grid grid-cols-1 lg:grid-cols-2 gap-6 p-2" style="grid-auto-rows: minmax(160px, auto);">
             <!-- Karty BOGO i podsumowanie zostaną wstawione tutaj przez JavaScript -->
         </main>
+
+        <!-- SZCZEGÓŁOWA KALKULACJA -->
+        <section class="relative z-10 mt-8">
+            <h2 class="text-2xl md:text-3xl font-semibold text-slate-800 text-center mb-6">Szczegółowa kalkulacja</h2>
+            <div class="overflow-x-auto">
+                <table class="min-w-full bg-white border border-gray-200 rounded-lg shadow">
+                    <thead class="bg-gray-50">
+                        <tr>
+                            <th class="py-3 px-4 border-b text-left text-sm font-semibold text-slate-600">PRODUKT</th>
+                            <th class="py-3 px-4 border-b text-right text-sm font-semibold text-slate-600">POZA ZESTAWEM (PLN)</th>
+                            <th class="py-3 px-4 border-b text-right text-sm font-semibold text-slate-600">W ZESTAWIE (PLN)</th>
+                        </tr>
+                    </thead>
+                    <tbody class="text-slate-700">
+                        <tr>
+                            <td class="py-3 px-4 border-b">Siberian Fir</td>
+                            <td class="py-3 px-4 border-b text-right">110,75</td>
+                            <td class="py-3 px-4 border-b text-right font-semibold">62,02</td>
+                        </tr>
+                        <tr>
+                            <td class="py-3 px-4 border-b">Cedarwood</td>
+                            <td class="py-3 px-4 border-b text-right">87,00</td>
+                            <td class="py-3 px-4 border-b text-right font-semibold">48,73</td>
+                        </tr>
+                        <tr>
+                            <td class="py-3 px-4 border-b">Oregano</td>
+                            <td class="py-3 px-4 border-b text-right">162,50</td>
+                            <td class="py-3 px-4 border-b text-right font-semibold">91,37</td>
+                        </tr>
+                        <tr>
+                            <td class="py-3 px-4 border-b">Majeranek</td>
+                            <td class="py-3 px-4 border-b text-right">126,50</td>
+                            <td class="py-3 px-4 border-b text-right font-semibold">71,13</td>
+                        </tr>
+                        <tr>
+                            <td class="py-3 px-4 border-b">On Guard</td>
+                            <td class="py-3 px-4 border-b text-right">205,75</td>
+                            <td class="py-3 px-4 border-b text-right font-semibold">141,11</td>
+                        </tr>
+                        <tr>
+                            <td class="py-3 px-4 border-b">Stronger Touch</td>
+                            <td class="py-3 px-4 border-b text-right">94,25</td>
+                            <td class="py-3 px-4 border-b text-right font-semibold">64,64</td>
+                        </tr>
+                        <tr>
+                            <td class="py-3 px-4 border-b">Vetiver Touch</td>
+                            <td class="py-3 px-4 border-b text-right">221,50</td>
+                            <td class="py-3 px-4 border-b text-right font-semibold">120,18</td>
+                        </tr>
+                        <tr>
+                            <td class="py-3 px-4 border-b">Guaiac Wood</td>
+                            <td class="py-3 px-4 border-b text-right">112,00</td>
+                            <td class="py-3 px-4 border-b text-right font-semibold">60,76</td>
+                        </tr>
+                        <tr>
+                            <td class="py-3 px-4 border-b">Balsam Fir</td>
+                            <td class="py-3 px-4 border-b text-right">74,75</td>
+                            <td class="py-3 px-4 border-b text-right font-semibold">40,56</td>
+                        </tr>
+                        <tr>
+                            <td class="py-3 px-4 border-b">Myrrh Touch</td>
+                            <td class="py-3 px-4 border-b text-right">273,00</td>
+                            <td class="py-3 px-4 border-b text-right font-semibold">162,91</td>
+                        </tr>
+                        <tr>
+                            <td class="py-3 px-4 border-b">Brightening Gel</td>
+                            <td class="py-3 px-4 border-b text-right">184,50</td>
+                            <td class="py-3 px-4 border-b text-right font-semibold">110,09</td>
+                        </tr>
+                    </tbody>
+                    <tfoot>
+                        <tr class="bg-gray-100 text-slate-800">
+                            <td class="py-4 px-4 font-bold">Suma</td>
+                            <td class="py-4 px-4 text-right font-normal">1652,50</td>
+                            <td class="py-4 px-4 text-right font-bold">973,50</td>
+                        </tr>
+                    </tfoot>
+                </table>
+            </div>
+        </section>
     </div>
 
     <!-- === JEDEN WSPÓLNY SZABLON DLA WSZYSTKICH KART === -->
