--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         </main>
 
         <!-- SZCZEGÓŁOWA KALKULACJA -->
-        <section class="relative z-10 mt-8">
+        <section class="relative z-10 mt-16">
             <h2 class="text-2xl md:text-3xl font-semibold text-slate-800 text-center mb-6">Szczegółowa kalkulacja</h2>
             <div class="overflow-x-auto">
                 <table class="min-w-full bg-white border border-gray-200 rounded-lg shadow">
@@ -214,10 +214,10 @@
                 </h3>
             </div>
             <div class="text-xs text-slate-600 mt-1 border-t pt-1">
-                <p>Cena zestawu: <strong class="card-price font-bold"></strong> <strong class="font-bold">zł</strong></p>
-                <p>Oszczędzasz: <strong class="card-savings-amount font-bold"></strong> <strong class="font-bold">zł</strong></p>
-                <p>Zyskujesz: <strong class="card-savings-percent font-bold"></strong></p>
-                <p>Wartość PV: <strong class="card-pv font-bold"></strong></p>
+                <p>Cena zestawu: <span class="card-price font-bold"></span></p>
+                <p>Wartość: <span class="card-total-value font-bold"></span></p>
+                <p>Cena niższa o: <span class="card-savings-combined font-bold"></span></p>
+                <p>PV: <span class="card-pv font-bold"></span></p>
             </div>
         </div>
     </div>
@@ -280,10 +280,9 @@
                 const totalValue = data.price + data.savings;
                 const savingsPercent = totalValue > 0 ? ((data.savings / totalValue) * 100).toFixed(1) : 0;
 
-                cardElement.querySelector('.card-price').textContent = data.price.toFixed(2);
-                cardElement.querySelector('.card-savings-amount').textContent = data.savings.toFixed(2);
-                cardElement.querySelector('.card-savings-percent').textContent = `${savingsPercent}%`;
-
+                cardElement.querySelector('.card-price').textContent = `${data.price.toFixed(2)} zł`;
+                cardElement.querySelector('.card-total-value').textContent = `${totalValue.toFixed(2)} zł`;
+                cardElement.querySelector('.card-savings-combined').textContent = `${data.savings.toFixed(2)} zł (–${savingsPercent}%)`;
                 cardElement.querySelector('.card-pv').textContent = data.pv.toFixed(1);
 
                 gridContainer.appendChild(cardElement);
