--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                     <!-- Treść tytułu będzie wstawiana przez JS -->
                 </h3>
             </div>
-            <div class="text-[10px] text-slate-600 mt-1 border-t pt-1 text-left sm:text-left inline-block sm:block">
+            <div class="text-[10px] text-slate-600 mt-1 border-t pt-1 text-center sm:text-left">
                 <p>Cena zestawu: <span class="card-price font-bold"></span></p>
                 <p>Wartość: <span class="card-total-value font-bold"></span></p>
                 <p>Cena niższa o: <span class="card-savings-combined font-bold"></span></p>
