--- a/index.html
+++ b/index.html
@@ -97,10 +97,18 @@
             class="absolute top-0 left-0 w-1/3 opacity-30 pointer-events-none z-0"
             onerror="this.style.display='none'"
         >
-        <img 
-            src="https://raw.githubusercontent.com/emilia-chodorowska/BOGO/main/images/liscie-dol.jpg" 
-            alt="" 
+        <img
+            src="https://raw.githubusercontent.com/emilia-chodorowska/BOGO/main/images/liscie-dol.jpg"
+            alt=""
             class="absolute bottom-0 right-0 w-1/3 opacity-30 pointer-events-none z-0"
+            onerror="this.style.display='none'"
+        >
+
+        <!-- LOGO BOGO -->
+        <img
+            src="https://raw.githubusercontent.com/emilia-chodorowska/BOGO/main/images/logobogo.png"
+            alt="Logo BOGO doTERRA"
+            class="relative z-20 mx-auto mb-4 w-32 md:w-40"
             onerror="this.style.display='none'"
         >
 
@@ -258,6 +266,11 @@
                     // zajmij pełen span kolumn na dużych ekranach (1 wiersz)
                     cardElement.classList.add('lg:col-span-2', 'lg:gap-0');
 
+                    // sprawdź czy karta ma zajmować 2 wiersze (2x2)
+                    if (data.spanTwoRows) {
+                        cardElement.classList.add('lg:row-span-2');
+                    }
+
                     // zwiększ wysokość kontenera grafiki dla kart spanFull (1.7x)
                     const imgContainer = cardElement.querySelector('.card-images');
                     imgContainer.classList.remove('h-[140px]', 'sm:h-[160px]');
@@ -374,20 +387,21 @@
             });
 
             // 2. Obliczanie i renderowanie podsumowania
-            // const totalPrice = bogoOffers.reduce((sum, offer) => sum + offer.price, 0);
-            // const totalSavings = bogoOffers.reduce((sum, offer) => sum + offer.savings, 0);
-            // const totalPV = bogoOffers.reduce((sum, offer) => sum + offer.pv, 0);
+            const totalPrice = bogoOffers.reduce((sum, offer) => sum + offer.price, 0);
+            const totalSavings = bogoOffers.reduce((sum, offer) => sum + offer.savings, 0);
+            const totalPV = bogoOffers.reduce((sum, offer) => sum + offer.pv, 0);
 
-            // createAndAppendCard({
-            //     isSummary: true,
-            //     spanFull: true,
-            //     img: 'https://raw.githubusercontent.com/emilia-chodorowska/BOGO/main/images/bogo-bundle.png',
-            //     alt: 'Zestaw BOGO',
-            //     titleHTML: 'Dodaj cały zestaw BOGO do koszyka, aby otrzymać wszystkie pary wraz z dodatkowym darmowym olejkiem Caraway 5ml',
-            //     price: totalPrice,
-            //     savings: totalSavings,
-            //     pv: totalPV
-            // });
+            createAndAppendCard({
+                isSummary: true,
+                spanFull: true,
+                spanTwoRows: true,
+                img: 'https://raw.githubusercontent.com/emilia-chodorowska/BOGO/main/images/bogo-bundle.png',
+                alt: 'Zestaw BOGO',
+                titleHTML: '<div>Pakiet BOGO +</div><div>GRATIS olejek z kminku (5 ml)</div>',
+                price: totalPrice,
+                savings: totalSavings,
+                pv: totalPV
+            });
 
             // --- LOGIKA PRZEŁĄCZNIKA RAMEK (DEBUG) ---
             // Zmodyfikowana funkcja toggleBorders
