--- a/index.html
+++ b/index.html
@@ -232,6 +232,11 @@
                 <p>Cena niższa o: <span class="card-savings-combined font-bold"></span></p>
                 <p>PV: <span class="card-pv font-bold"></span></p>
             </div>
+            <!-- Informacja o warunkach gratisu (tylko dla karty podsumowującej) -->
+            <div class="card-disclaimer hidden text-[9px] text-gray-500 italic mt-6 leading-relaxed text-left space-y-1">
+                <p>Aby dostać darmowy produkt, koniecznie wybierz pakiet BOGO - nie dodawaj ofert do koszyka pojedynczo.</p>
+                <p>Pakiet BOGO i darmowy upominek będą dostępne tylko do momentu, aż wyprzeda się choć jeden z zestawów BOGO.</p>
+            </div>
         </div>
     </div>
 </template>
@@ -336,6 +341,14 @@
                 cardElement.querySelector('.card-total-value').textContent = `${totalValue.toFixed(2)} zł`;
                 cardElement.querySelector('.card-savings-combined').textContent = `${savingsPercent}%`;
                 cardElement.querySelector('.card-pv').textContent = data.pv.toFixed(1);
+
+                // Pokaż disclaimer tylko dla karty podsumowującej
+                if (data.isSummary) {
+                    const disclaimer = cardElement.querySelector('.card-disclaimer');
+                    if (disclaimer) {
+                        disclaimer.classList.remove('hidden');
+                    }
+                }
 
                 gridContainer.appendChild(cardElement);
             }
