Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                             <td class="py-3 px-4 border-b text-right font-semibold">120,18</td>
                         </tr>
                         <tr>
-                            <td class="py-3 px-4 border-b">Guaiac Wood</td>
+                            <td class="py-3 px-4 border-b">Guaiacwood</td>
                             <td class="py-3 px-4 border-b text-right">112,00</td>
                             <td class="py-3 px-4 border-b text-right font-semibold">60,76</td>
                         </tr>
@@ -208,6 +208,28 @@
                 </table>
             </div>
         </section>
+
+        <!-- SEKCJA JAK ZAMÓWIĆ -->
+        <section class="relative z-10 mt-16">
+            <h2 class="text-2xl md:text-3xl font-semibold text-slate-800 mb-6">Jak zamówić</h2>
+
+            <div class="bg-white border border-gray-200 rounded-lg shadow p-6">
+                <h3 class="text-lg font-semibold text-slate-800 mb-4">Dodawanie produktów BOGO z poziomu zamówienia lojalnościowego (LRP)</h3>
+
+                <ol class="list-decimal list-inside space-y-3 text-slate-700 mb-6">
+                    <li>Zaloguj się na swoje konto i kliknij ikonę <strong>„Konto"</strong> na górnym pasku strony.</li>
+                    <li>Z menu wybierz <strong>„Moje zamówienia lojalnościowe (LRP)"</strong>.</li>
+                    <li>Kliknij <strong>„Zarządzaj zamówieniem"</strong>, aby otworzyć edycję swojego LRP.</li>
+                    <li>Wyszukaj interesujące Cię produkty BOGO – możesz skorzystać z wyszukiwarki lub przycisku <strong>„Przeglądaj"</strong>, aby przejrzeć dostępne oferty.</li>
+                    <li>Dodaj wybrane produkty do koszyka i kliknij <strong>„Kolejny krok"</strong>, aby kontynuować składanie zamówienia.</li>
+                </ol>
+
+                <div class="space-y-3 text-sm text-slate-600 bg-gray-50 p-4 rounded border-l-4 border-slate-400">
+                    <p><strong>Pamiętaj:</strong> jeśli dodajesz artykuły BOGO do swojego zamówienia lojalnościowego, <strong>musisz złożyć to zamówienie natychmiast</strong>, by mieć pewność, że skorzystasz z oferty BOGO.</p>
+                    <p><strong>Pamiętaj:</strong> jeśli wybierasz cały pakiet BOGO, musisz w swoim szablonie LRP dodać przynajmniej <strong>jeden produkt ze standardowej oferty</strong>, aby zamówienie mogło zostać przetworzone.</p>
+                </div>
+            </div>
+        </section>
     </div>
 
     <!-- === JEDEN WSPÓLNY SZABLON DLA WSZYSTKICH KART === -->
@@ -233,7 +255,7 @@
                 <p>PV: <span class="card-pv font-bold"></span></p>
             </div>
             <!-- Informacja o warunkach gratisu (tylko dla karty podsumowującej) -->
-            <div class="card-disclaimer hidden text-[9px] text-gray-500 italic mt-6 leading-relaxed text-left space-y-1">
+            <div class="card-disclaimer hidden text-[9px] text-gray-500 italic mt-6 leading-relaxed text-center space-y-1">
                 <p>Aby dostać darmowy produkt, koniecznie wybierz pakiet BOGO - nie dodawaj ofert do koszyka pojedynczo.</p>
                 <p>Pakiet BOGO i darmowy upominek będą dostępne tylko do momentu, aż wyprzeda się choć jeden z zestawów BOGO.</p>
             </div>
@@ -251,7 +273,7 @@
                 { id: 1, name: "Siberian Fir + Cedarwood", price: 110.75, savings: 87.00, pv: 23.50, img: "https://raw.githubusercontent.com/emilia-chodorowska/BOGO/main/images/1.png", spanFull: false },
                 { id: 2, name: "Oregano + Majeranek", price: 162.50, savings: 126.50, pv: 34.50, img: "https://raw.githubusercontent.com/emilia-chodorowska/BOGO/main/images/2.png", spanFull: false },
                 { id: 3, name: "On Guard + Stronger Touch", price: 205.75, savings: 94.25, pv: 43.50, img: "https://raw.githubusercontent.com/emilia-chodorowska/BOGO/main/images/3.png", spanFull: false },
-                { id: 4, name: "Vetiver Touch + Guaiac Wood + Balsam Fir", price: 221.50, savings: 186.75, pv: 47.00, img: "https://raw.githubusercontent.com/emilia-chodorowska/BOGO/main/images/4.png", spanFull: false },
+                { id: 4, name: "Vetiver Touch + Guaiacwood + Balsam Fir", price: 221.50, savings: 186.75, pv: 47.00, img: "https://raw.githubusercontent.com/emilia-chodorowska/BOGO/main/images/4.png", spanFull: false },
                 { id: 5, name: "Myrrh Touch + Brightening Gel", price: 273.00, savings: 184.50, pv: 58.00, img: "https://raw.githubusercontent.com/emilia-chodorowska/BOGO/main/images/bogo5.png", imgMobile: "https://raw.githubusercontent.com/emilia-chodorowska/BOGO/main/images/bogo5_centered.png", spanFull: true }
             ];
 
