Changes to be committed: 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
     <!-- ======================================================================= -->
-    
+
+    <!-- Kolor paska adresu na urządzeniach mobilnych -->
+    <meta name="theme-color" content="#ffffff">
+
     <!-- Dołączamy bibliotekę Tailwind CSS do stylizacji -->
     <script src="https://cdn.tailwindcss.com"></script>
     
@@ -26,6 +29,7 @@
     <!-- === FAVICON === -->
     <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/emilia-chodorowska/BOGO/main/images/favicon.ico">
     <link rel="icon" sizes="192x192" href="https://raw.githubusercontent.com/emilia-chodorowska/BOGO/main/images/android-chrome-192x192.png">
+    <link rel="icon" sizes="512x512" href="https://raw.githubusercontent.com/emilia-chodorowska/BOGO/main/images/android-chrome-512x512.png">
     <link rel="apple-touch-icon" sizes="180x180" href="https://raw.githubusercontent.com/emilia-chodorowska/BOGO/main/images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="https://raw.githubusercontent.com/emilia-chodorowska/BOGO/main/images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="https://raw.githubusercontent.com/emilia-chodorowska/BOGO/main/images/favicon-16x16.png">
