--- a/index_info.html
+++ b/index_info.html
@@ -75,6 +75,140 @@
         .toggle-checkbox:checked + .toggle-label .toggle-dot {
             transform: translateX(100%);
         }
+
+        /* Style dla drukowania PDF */
+        @media print {
+            body {
+                background-color: white;
+                padding: 0;
+                margin: 0;
+            }
+
+            /* Ukryj elementy niepotrzebne w PDF */
+            .toggle-checkbox,
+            .toggle-label,
+            [class*="fixed"] {
+                display: none !important;
+            }
+
+            /* Usuń cienie i efekty */
+            .shadow-xl,
+            .shadow-lg,
+            .shadow {
+                box-shadow: none !important;
+            }
+
+            /* Ukryj liście w tle */
+            img[src*="liscie"] {
+                display: none !important;
+            }
+
+            /* Nowa strona przed każdą sekcją */
+            section {
+                page-break-before: always;
+                break-before: page;
+            }
+
+            /* Pierwsza sekcja (główna treść) nie zaczyna się na nowej stronie */
+            main {
+                page-break-before: avoid;
+                break-before: avoid;
+            }
+
+            /* Nagłówek sekcji nie może być rozdzielony od treści */
+            section h2 {
+                page-break-after: avoid;
+                break-after: avoid;
+            }
+
+            /* Zawartość sekcji (div bezpośrednio po h2) pozostaje z nagłówkiem */
+            section h2 + div {
+                page-break-before: avoid;
+                break-before: avoid;
+            }
+
+            /* Zapobiega rozdzielaniu tabel i ramek między stronami */
+            table,
+            .bogo-card,
+            .bg-white.border {
+                page-break-inside: avoid;
+                break-inside: avoid;
+            }
+
+            /* Optymalizacja dla A4 */
+            @page {
+                size: A4;
+                margin: 2cm;
+            }
+
+            /* Usuń stopki i nagłówki stron */
+            @page {
+                margin-top: 2cm;
+                margin-bottom: 2cm;
+            }
+
+            /* Ukryj automatyczne nagłówki/stopki przeglądarki */
+            header, footer {
+                display: block;
+            }
+
+            /* Dostosuj kontenery */
+            #main-container {
+                max-width: 100%;
+                padding: 0;
+                margin: 0;
+                box-shadow: none;
+            }
+
+            /* Nagłówek na pierwszej stronie */
+            header {
+                page-break-after: avoid;
+                break-after: avoid;
+            }
+
+            /* Zmniejsz czcionkę w sekcji "Dla osób zarejestrowanych we wrześniu 2025" */
+            #sekcja-wrzesien h2 {
+                font-size: 1.5rem !important; /* zmniejszony nagłówek */
+                line-height: 1.3 !important; /* zmniejszona interlinia nagłówka */
+                margin-bottom: 1rem !important; /* mniejszy margines */
+            }
+
+            #sekcja-wrzesien .text-base {
+                font-size: 0.8rem !important; /* zmniejszony tekst */
+                line-height: 1.4 !important; /* zmniejszona interlinia */
+            }
+
+            #sekcja-wrzesien .text-lg {
+                font-size: 0.9rem !important; /* zmniejszone wzmocnienia */
+            }
+
+            #sekcja-wrzesien .text-sm {
+                font-size: 0.7rem !important; /* zmniejszony mały tekst */
+                line-height: 1.3 !important; /* zmniejszona interlinia */
+            }
+
+            #sekcja-wrzesien table {
+                font-size: 0.75rem !important; /* zmniejszona tabela */
+                line-height: 1.3 !important; /* zmniejszona interlinia w tabeli */
+            }
+
+            #sekcja-wrzesien th,
+            #sekcja-wrzesien td {
+                padding: 0.3rem 0.5rem !important; /* mniejsze odstępy w tabeli */
+            }
+
+            #sekcja-wrzesien .space-y-4 > * + * {
+                margin-top: 0.75rem !important; /* zmniejszone odstępy między elementami */
+            }
+
+            #sekcja-wrzesien p {
+                margin-bottom: 0.5rem !important; /* mniejsze marginesy akapitów */
+            }
+
+            #sekcja-wrzesien ul {
+                line-height: 1.3 !important; /* zmniejszona interlinia w listach */
+            }
+        }
     </style>
 </head>
 <body class="bg-gray-50 flex items-center justify-center min-h-screen py-8">
@@ -231,6 +365,103 @@
                 <div class="space-y-3 text-sm text-slate-600 bg-gray-50 p-4 rounded border-l-4 border-slate-400">
                     <p><strong>Pamiętaj:</strong> jeśli dodajesz artykuły BOGO do swojego zamówienia lojalnościowego, <strong>musisz złożyć to zamówienie natychmiast</strong>, by mieć pewność, że skorzystasz z oferty BOGO.</p>
                     <p><strong>Pamiętaj:</strong> jeśli wybierasz cały pakiet BOGO, musisz w swoim szablonie LRP dodać przynajmniej <strong>jeden produkt ze standardowej oferty</strong>, aby zamówienie mogło zostać przetworzone.</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- SEKCJA TREŚĆ DO GRAFIKI -->
+        <section id="sekcja-wrzesien" class="relative z-10 mt-16">
+            <h2 class="text-2xl md:text-3xl font-semibold text-slate-800 mb-6 text-center leading-tight">Dla osób zarejestrowanych we wrześniu 2025</h2>
+
+            <div class="bg-white border border-gray-200 rounded-lg shadow p-6">
+                <div class="space-y-3 text-slate-700">
+                    <p class="text-base leading-snug">
+                        Za złożenie zamówień LRP o wartości co najmniej <strong class="text-lg">100 PV w październiku</strong> i <strong class="text-lg">listopadzie</strong> przyznawane są punkty produktowe.
+                    </p>
+
+                    <p class="text-base leading-snug">
+                        Każde kwalifikujące się zamówienie daje <strong class="text-lg">25 punktów</strong>.
+                    </p>
+
+                    <p class="text-base leading-snug">
+                        Łącznie można otrzymać <strong class="text-lg">50 punktów produktowych</strong>, jeśli zamówienia zostaną złożone w dwóch kolejnych miesiącach.
+                    </p>
+
+                    <div class="mt-6 p-4 bg-blue-50 border-l-4 border-blue-400 rounded">
+                        <p class="text-base font-semibold text-slate-800 mb-2 leading-snug">Ważne informacje:</p>
+                        <ul class="space-y-1 text-sm leading-snug">
+                            <li>Punkty przyznawane są w <strong>drugiej połowie miesiąca następującego po miesiącu</strong>, w którym przetworzono zamówienie.</li>
+                            <li>Brak zamówienia w październiku powoduje utratę możliwości uzyskania punktów za listopad.</li>
+                        </ul>
+                    </div>
+
+                    <div class="mt-6">
+                        <p class="text-lg font-bold text-slate-800 mb-3 leading-snug">
+                            Szacowane punkty dostępne w drugiej połowie grudnia: 84 punkty
+                        </p>
+
+                        <div class="overflow-x-auto">
+                            <table class="min-w-full bg-white border border-gray-200 rounded-lg shadow">
+                                <thead class="bg-gray-50">
+                                    <tr>
+                                        <th class="py-2 px-3 border-b text-left text-xs font-semibold text-slate-600">MIESIĄC</th>
+                                        <th class="py-2 px-3 border-b text-left text-xs font-semibold text-slate-600">RODZAJ PUNKTÓW</th>
+                                        <th class="py-2 px-3 border-b text-right text-xs font-semibold text-slate-600">PUNKTY</th>
+                                    </tr>
+                                </thead>
+                                <tbody class="text-slate-700">
+                                    <tr>
+                                        <td class="py-2 px-3 border-b align-top text-sm" rowspan="3">Październik</td>
+                                        <td class="py-2 px-3 border-b text-sm">Zwrot za zamówienie 100PV (10%)</td>
+                                        <td class="py-2 px-3 border-b text-right text-sm">10</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="py-2 px-3 border-b text-sm">Zwrot za wysyłkę</td>
+                                        <td class="py-2 px-3 border-b text-right text-sm">7</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="py-2 px-3 border-b text-sm">Spełnienie warunku promocji</td>
+                                        <td class="py-2 px-3 border-b text-right text-sm">25</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="py-2 px-3 border-b align-top text-sm" rowspan="3">Listopad</td>
+                                        <td class="py-2 px-3 border-b text-sm">Zwrot za zamówienie 100PV (10%)</td>
+                                        <td class="py-2 px-3 border-b text-right text-sm">10</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="py-2 px-3 border-b text-sm">Zwrot za wysyłkę</td>
+                                        <td class="py-2 px-3 border-b text-right text-sm">7</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="py-2 px-3 border-b text-sm">Spełnienie warunku promocji</td>
+                                        <td class="py-2 px-3 border-b text-right text-sm">25</td>
+                                    </tr>
+                                </tbody>
+                                <tfoot>
+                                    <tr class="bg-gray-100 text-slate-800">
+                                        <td colspan="2" class="py-2 px-3 font-bold text-sm">SUMA</td>
+                                        <td class="py-2 px-3 text-right font-bold text-sm">84</td>
+                                    </tr>
+                                </tfoot>
+                            </table>
+                        </div>
+
+                        <div class="mt-6 p-4 bg-green-50 border-2 border-green-300 rounded">
+                            <p class="text-base font-semibold text-slate-800 mb-2">Wykorzystanie punktów:</p>
+
+                            <p class="text-sm mb-3">
+                                <strong class="text-base">84 punkty</strong> = dwa ulubione olejki lub mieszanka do odebrania za <strong class="text-base">9 zł</strong>
+                            </p>
+
+                            <p class="text-sm font-semibold text-slate-800 mb-2">Przykładowe zestawy:</p>
+                            <ul class="grid grid-cols-1 md:grid-cols-2 gap-x-4 gap-y-2 text-sm">
+                                <li>Serenity + Balance = 83,5 pkt</li>
+                                <li>Bergamot + Balance = 83 pkt</li>
+                                <li>Serenity + Citrus Bliss = 82,5 pkt</li>
+                                <li>Bergamot + Citrus Bliss = 82 pkt</li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
